--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ allprojects {
     }
 
     configurations.all {
-        resolutionStrategy.force 'org.objenesis:objenesis::3.2'
+        resolutionStrategy.force 'org.objenesis:objenesis:3.2'
     }
 }
 
