--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -123,6 +123,13 @@ android {
     testOptions {
         unitTests.includeAndroidResources = true
         unitTests.returnDefaultValues = true
+            unitTests.all {
+                if (name == "testDebugUnitTest" || name == "testReleaseUnitTest") {
+                    kover {
+                        excludes = ["com\\.telnyx\\.webrtc\\.sdk\\.peer\\..*"] //Can't mock native code, these methods will be tested via instrumentation instead.
+                    }
+                }
+            }
     }
     sourceSets {
         test.manifest.srcFile "src/main/AndroidManifest.xml"
@@ -181,14 +188,14 @@ dependencies {
     implementation deps.ktor.gson
     implementation deps.ktor.websockets
     implementation deps.ktor.okhttp
-    implementation 'androidx.lifecycle:lifecycle-process:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-process:2.4.0'
     testImplementation deps.ktor.client_test
 
     implementation 'org.jetbrains.kotlin:kotlin-android-extensions-runtime:1.6.0'
 
 
     //BugSnag:
-    implementation deps.bugsnag
+    implementation "com.bugsnag:bugsnag-android:5.+"
 
     // Volley
     implementation deps.volley
@@ -220,23 +227,23 @@ dependencies {
 
     // jUnit 4
     testImplementation 'junit:junit:4.13.2'
-    testImplementation "org.junit.vintage:junit-vintage-engine:5.7.0"
-    testImplementation "androidx.test:core-ktx:1.3.0"
+    testImplementation "org.junit.vintage:junit-vintage-engine:5.8.2"
+    testImplementation "androidx.test:core-ktx:1.4.0"
 
     // jUnit 5
-    def jupiter_version = "5.8.1"
+    def jupiter_version = "5.8.2"
     testImplementation "org.junit.jupiter:junit-jupiter-api:$jupiter_version"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$jupiter_version"
     testImplementation "org.junit.jupiter:junit-jupiter-params:$jupiter_version"
 
-    def kotest_version = "4.3.2"
+    def kotest_version = "5.0.1"
     testImplementation "io.kotest:kotest-runner-junit5:$kotest_version"
     testImplementation "io.kotest:kotest-assertions-core-jvm:$kotest_version"
     testImplementation "io.kotest:kotest-property-jvm:$kotest_version"
     androidTestImplementation "io.kotest:kotest-assertions-core-jvm:$kotest_version"
     androidTestImplementation "io.kotest:kotest-property-jvm:$kotest_version"
 
-    testImplementation "org.slf4j:slf4j-nop:1.7.25"
+    testImplementation "org.slf4j:slf4j-nop:1.7.32"
 
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 
@@ -254,7 +261,7 @@ dependencies {
     debugImplementation 'androidx.test:core-ktx:1.4.0'
 
     testImplementation "org.mockito:mockito-inline:4.1.0"
-    androidTestImplementation "org.mockito:mockito-android:3.8.0"
+    androidTestImplementation "org.mockito:mockito-android:4.1.0"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
