--- a/versions.gradle
+++ b/versions.gradle
@@ -1,7 +1,7 @@
 ext.deps = [:]
 
 def versions = [:]
-versions.android_gradle_plugin = '4.1.2'
+versions.android_gradle_plugin = '4.2.0'
 versions.google_play_services = "4.3.5"
 versions.kotlin = "1.4.21"
 versions.androidx_core = "1.3.2"
@@ -22,7 +22,7 @@ versions.googleservices = "4.3.8"
 versions.volley = "1.1.1"
 versions.firebasebom = "28.2.1"
 versions.hilt = "2.38.1"
-versions.bugsnag = "5.+"
+versions.bugsnag = "7.+"
 versions.dialpad = "3.0.0"
 
 
@@ -48,7 +48,7 @@ deps.dexter = "com.karumi:dexter:$versions.dexter"
 deps.firebasebom = "com.google.firebase:firebase-bom:$versions.firebasebom"
 deps.firebase_analytics = "com.google.firebase:firebase-analytics-ktx"
 deps.firebase_messaging = "com.google.firebase:firebase-messaging-ktx"
-deps.bugsnag = "com.bugsnag:bugsnag-android:$versions.bugsnag"
+deps.bugsnag = "com.bugsnag:bugsnag-android-gradle-plugin:$versions.bugsnag"
 
 def kotlin = [:]
 kotlin.plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
