[WEBRTC-755] Fix publish configurations

--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -56,7 +56,7 @@ publishing {
                         }
                     }
                 }
-                configurations.compile.getDependencies().each { dep -> addDependency(dep, "compile") }
+                configurations.implementation.getDependencies().each { dep -> addDependency(dep, "compile") }
 
                 configurations.api.getDependencies().each { dep -> addDependency(dep, "compile") }
 
