--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,11 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:10.2.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath("org.jetbrains.kotlinx:kover:0.4.4")
         classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.19.0"
@@ -27,6 +29,8 @@ def githubProperties = new Properties()
 githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
 
 allprojects {
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
+
     repositories {
         google()
         jcenter()
