[WEBRTC-686] Add wsmessage adapter and viewholder to handle ws message list

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,11 @@ android {
         unitTests.returnDefaultValues = true
     }
 
+    buildFeatures{
+        viewBinding true
+        dataBinding true
+    }
+
     packagingOptions {
         exclude "META-INF/DEPENDENCIES"
         exclude "**/attach_hotspot_windows.dll"
