--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -11,10 +11,9 @@ plugins {
 
 apply plugin: 'maven-publish'
 apply plugin: "com.bugsnag.android.gradle"
-apply plugin: 'io.gitlab.arturbosch.detekt'
 
 def getVersionName = { ->
-    return "0.0.25"
+    return "v1.2.15-alpha"
 }
 
 def getArtifactId = { ->
@@ -77,7 +76,7 @@ dokkaHtml.configure {
 
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 32
     buildToolsVersion "30.0.3"
 
     androidExtensions {
@@ -86,7 +85,7 @@ android {
 
     defaultConfig {
         minSdkVersion 23
-        targetSdkVersion 31
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
 
@@ -95,7 +94,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'proguard-rules.txt'
 
-        buildConfigField ("double", "SDK_VERSION", versionName)
+        buildConfigField("double", "SDK_VERSION", versionName)
         buildConfigField "java.util.concurrent.atomic.AtomicBoolean", "IS_TESTING", "new java.util.concurrent.atomic.AtomicBoolean(false)"
     }
 
@@ -123,30 +122,39 @@ android {
     testOptions {
         unitTests.includeAndroidResources = true
         unitTests.returnDefaultValues = true
-            unitTests.all {
-                if (name == "testDebugUnitTest" || name == "testReleaseUnitTest") {
-                    kover {
-                        excludes = ["com\\.telnyx\\.webrtc\\.sdk\\.peer\\..*"] //Can't mock native code, these methods will be tested via instrumentation instead.
-                    }
+        unitTests.all {
+            if (name == "testDebugUnitTest" || name == "testReleaseUnitTest") {
+                kover {
+                    excludes = ["com\\.telnyx\\.webrtc\\.sdk\\.peer\\..*"]
+                    //Can't mock native code, these methods will be tested via instrumentation instead.
                 }
             }
+        }
     }
     sourceSets {
         test.manifest.srcFile "src/main/AndroidManifest.xml"
+    }
+    lintOptions {
+        abortOnError false
+        absolutePaths false
     }
 }
 
 detekt {
     buildUponDefaultConfig = true // preconfigure defaults
     allRules = false // activate all available (even unstable) rules.
-    config = files("$projectDir/config/detekt.yml") // point to your custom config defining rules to run, overwriting default behavior
-    baseline = file("$projectDir/config/baseline.xml") // a way of suppressing issues before introducing detekt
+    config = files("$projectDir/config/detekt.yml")
+    // point to your custom config defining rules to run, overwriting default behavior
+    baseline = file("$projectDir/config/baseline.xml")
+    // a way of suppressing issues before introducing detekt
 
     reports {
         html.enabled = true // observe findings in your browser with structure and code snippets
         xml.enabled = true // checkstyle like format mainly for integrations like Jenkins
-        txt.enabled = true // similar to the console output, contains issue signature to manually edit baseline files
-        sarif.enabled = true // standardized SARIF format (https://sarifweb.azurewebsites.net/) to support integrations with Github Code Scanning
+        txt.enabled = true
+        // similar to the console output, contains issue signature to manually edit baseline files
+        sarif.enabled = true
+        // standardized SARIF format (https://sarifweb.azurewebsites.net/) to support integrations with Github Code Scanning
     }
 }
 
