--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -178,7 +178,7 @@ dependencies {
     implementation deps.material
     implementation deps.constraint_layout
 
-    implementation deps.webrtc
+    implementation "io.getstream:stream-webrtc-android:1.0.0"
 
     implementation deps.gson
     implementation deps.retrofit.runtime
