--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,8 @@ android {
             jniDebuggable true
         }
         debug {
-            buildConfigField 'String', "MOCK_USERNAME", properties.getProperty('MOCK_USERNAME', '"isaac55577"')
-            buildConfigField 'String', "MOCK_PASSWORD", properties.getProperty('MOCK_PASSWORD', '"UcfBBJGR"')
+            buildConfigField 'String', "MOCK_USERNAME", properties.getProperty('MOCK_USERNAME', '"xxxxx"')
+            buildConfigField 'String', "MOCK_PASSWORD", properties.getProperty('MOCK_PASSWORD', '"xxxxx"')
 
             resValue('string', "mock_username", properties.getProperty('MOCK_USERNAME', '"xxxxx"'))
             resValue('string', "mock_password", properties.getProperty('MOCK_PASSWORD', '"xxxxx"'))
