- Implemented New Attach Calls Method for Push Notifications Calls
- Added `processCallFromPush(txPushIPConfig: TxPushIPConfig)` to be called when device receives Push Notification

- Added `attach_call = true` to LoginParams

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'com.google.gms.google-services'
+
 }
 
 def localProperties = new Properties()
@@ -199,4 +200,7 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation platform('com.google.firebase:firebase-bom:32.2.3')
+    implementation 'com.google.firebase:firebase-analytics'
+
 }
