--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,2 +1,14 @@
 /build
 .idea/
+
+# IntelliJ
+misc.xml
+deploymentTargetDropDown.xml
+render.experimental.xml
+
+# Keystore files
+*.jks
+*.keystore
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
