--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'maven-publish'
 apply plugin: "com.bugsnag.android.gradle"
 
 def getVersionName = { ->
-    return "v.1.2.4"
+    return "v1.2.16-alpha"
 }
 
 def getArtifactId = { ->
