--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -198,7 +198,7 @@ dependencies {
     implementation deps.ktor.gson
     implementation deps.ktor.websockets
     implementation deps.ktor.okhttp
-    implementation 'androidx.lifecycle:lifecycle-process:2.8.0'
+    implementation 'androidx.lifecycle:lifecycle-process:2.7.0'
     testImplementation deps.ktor.client_test
 
     implementation 'org.jetbrains.kotlin:kotlin-android-extensions-runtime:1.7.10'
@@ -207,8 +207,6 @@ dependencies {
     //BugSnag:
     implementation "com.bugsnag:bugsnag-android:5.+"
 
-    // Volley
-    implementation deps.volley
 
     // Firebase
     implementation platform(deps.firebasebom)
@@ -266,7 +264,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:truth:1.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.work:work-testing:2.7.1'
-    androidTestImplementation "io.mockk:mockk-android:1.12.5"
+    androidTestImplementation "io.mockk:mockk-androitd:1.12.5"
     debugImplementation 'androidx.fragment:fragment-testing:1.5.2'
     debugImplementation 'androidx.test:core-ktx:1.4.0'
 
@@ -276,6 +274,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    def lifecycle_version = "2.8.0"
+    def lifecycle_version = "2.7.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 }
