--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -2,11 +2,12 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
+    id 'com.google.dagger.hilt.android'
     id 'org.jetbrains.dokka'
     id 'maven-publish'
-    id 'kotlin-android-extensions'
     id 'io.gitlab.arturbosch.detekt'
+    id  'kotlin-parcelize'
+
 }
 
 apply plugin: 'maven-publish'
@@ -78,12 +79,10 @@ dokkaHtml.configure {
 
 
 android {
-    compileSdkVersion 34
-    buildToolsVersion "30.0.3"
 
-    androidExtensions {
-        experimental = true
-    }
+
+
+    compileSdkVersion 34
 
     defaultConfig {
         minSdkVersion 23
@@ -178,7 +177,7 @@ dependencies {
     implementation deps.material
     implementation deps.constraint_layout
 
-    implementation "io.getstream:stream-webrtc-android:1.0.4"
+    implementation "io.getstream:stream-webrtc-android:1.1.2"
 
     implementation deps.gson
     implementation deps.retrofit.runtime
@@ -201,7 +200,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-process:2.7.0'
     testImplementation deps.ktor.client_test
 
-    implementation 'org.jetbrains.kotlin:kotlin-android-extensions-runtime:1.7.10'
 
 
     //BugSnag:
@@ -253,7 +251,7 @@ dependencies {
 
     testImplementation "org.slf4j:slf4j-nop:1.7.36"
 
-    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.9.10'
 
     // Testing - Instrumentation
     androidTestImplementation 'junit:junit:4.13.2'
@@ -264,7 +262,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:truth:1.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.work:work-testing:2.7.1'
-    androidTestImplementation "io.mockk:mockk-androitd:1.12.5"
+    androidTestImplementation "io.mockk:mockk-android:1.12.5"
     debugImplementation 'androidx.fragment:fragment-testing:1.5.2'
     debugImplementation 'androidx.test:core-ktx:1.4.0'
 
