--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -14,16 +14,16 @@ apply plugin: 'maven-publish'
 apply plugin: "com.bugsnag.android.gradle"
 
 def getVersionName = { ->
-    return "1.3.5"
+    return "1.3.7"
 }
 
 def getArtifactId = { ->
     return "telnyx_rtc"
 }
 
-task sourceJar(type: Jar) {
+tasks.register('sourceJar', Jar) {
     from android.sourceSets.main.java.srcDirs
-    classifier "sources"
+    archiveClassifier.set('sources')
 }
 
 publishing {
@@ -83,7 +83,7 @@ android {
 
 
     compileSdkVersion 34
-
+    namespace "com.telnyx.webrtc.sdk.telnyx_rtc"
     defaultConfig {
         minSdkVersion 23
         targetSdkVersion 34
@@ -114,11 +114,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '11'
+        jvmTarget = '1.8'
     }
     testOptions {
         unitTests.includeAndroidResources = true
