--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ android {
             resValue('string', "mock_username", properties.getProperty('MOCK_USERNAME', '"xxxxx"'))
             resValue('string', "mock_password", properties.getProperty('MOCK_PASSWORD', '"xxxxx"'))
 
+            buildConfigField "boolean", "IS_STATS_DEBUG_MODE", "false"
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             jniDebuggable true
@@ -50,6 +52,8 @@ android {
 
             resValue('string', "mock_username", properties.getProperty('MOCK_USERNAME', '"xxxxx"'))
             resValue('string', "mock_password", properties.getProperty('MOCK_PASSWORD', '"xxxxx"'))
+
+            buildConfigField "boolean", "IS_STATS_DEBUG_MODE", "true"
 
             testCoverageEnabled true
             minifyEnabled false
