Feature: internal pre-compiled web rtc lib used by SDK

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ allprojects {
         mavenCentral()
         maven { url "https://plugins.gradle.org/m2/" }
         maven { url "https://jitpack.io" }
+        maven {
+            url = uri("/Users/macos/Projects/TelnyxAndroidWebRTCLibrary/app/build/repo")
+        }
     }
 
     configurations.all {
