--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ localProperties.load(new FileInputStream(rootProject.file("local.properties")))
 android {
     compileSdkVersion 34
     buildToolsVersion "30.0.3"
+    namespace = "com.telnyx.webrtc.sdk"
 
     defaultConfig {
         applicationId "com.telnyx.webrtc.sdk"
@@ -19,6 +20,7 @@ android {
         targetSdkVersion 34
         versionCode 1
         versionName "1.0"
+
 
         multiDexEnabled true
 
@@ -77,6 +79,7 @@ android {
     buildFeatures {
         viewBinding true
         dataBinding true
+        buildConfig true
     }
 
     packagingOptions {
