--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -12,6 +12,10 @@ plugins {
 apply plugin: 'maven-publish'
 apply plugin: 'com.bugsnag.android.gradle'
 
+android {
+    namespace 'com.telnyx.webrtc.sdk.telnyx_rtc'
+}
+
 def getVersionName = { ->
     return "1.3.5"
 }
@@ -20,10 +24,10 @@ def getArtifactId = { ->
     return "telnyx_rtc"
 }
 
-task sourceJar(type: Jar) {
+/*task sourceJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
     classifier "sources"
-}
+}*/
 
 publishing {
     publications {
@@ -34,7 +38,7 @@ publishing {
             artifact("$buildDir/outputs/aar/${getArtifactId()}-release.aar") {
                 builtBy assemble
             }
-            artifact(sourceJar)
+//            artifact(sourceJar)
             pom.withXml {
                 final dependenciesNode = asNode().appendNode('dependencies')
                 ext.addDependency = { Dependency dep, String scope ->
@@ -124,6 +128,9 @@ android {
     lintOptions {
         abortOnError false
         absolutePaths false
+    }
+    buildFeatures {
+        buildConfig true
     }
 }
 
