--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     apply from: 'versions.gradle'
-    ext.kotlin_version = "1.9.0"
+    ext.kotlin_version = "1.9.23"
     repositories {
         google()
         mavenCentral()
         maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:8.1.4"
+        classpath 'com.android.tools.build:gradle:8.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath("org.jetbrains.kotlinx:kover:0.5.1")
         classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.21.0"
