--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -77,15 +77,13 @@ android {
     defaultConfig {
         minSdkVersion 23
         targetSdkVersion 34
-        versionCode 1
-        versionName "1.0"
 
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'proguard-rules.txt'
 
-        buildConfigField("double", "SDK_VERSION", versionName)
+        buildConfigField("double", "SDK_VERSION", versionName ?: "1.0")
         buildConfigField "java.util.concurrent.atomic.AtomicBoolean", "IS_TESTING", "new java.util.concurrent.atomic.AtomicBoolean(false)"
     }
 
@@ -99,7 +97,6 @@ android {
             testCoverageEnabled true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            debuggable true
             jniDebuggable true
         }
     }
