--- a/telnyx_rtc/config/detekt.yml
+++ b/telnyx_rtc/config/detekt.yml
@@ -11,7 +11,7 @@ config:
   validation: true
   warningsAsErrors: false
   # when writing own rules with new properties, exclude the property path e.g.: 'my_rule_set,.*>.*>[my_property]'
-  excludes: '.*/compose_app/.*'
+  excludes: ['**/compose_app/**']
 processors:
   active: true
   exclude:
