--- a/telnyx_rtc/config/detekt.yml
+++ b/telnyx_rtc/config/detekt.yml
@@ -1,7 +1,7 @@
 build:
   maxIssues: 300
   excludeCorrectable: false
-  weights:https://github.com/team-telnyx/telnyx-webrtc-android/blob/WEBRTC-2361_XML/telnyx_rtc/config/detekt.yml
+  weights:
   # complexity: 2
   # LongParameterList: 1
   # style: 1
@@ -12,6 +12,7 @@ config:
   warningsAsErrors: false
   # when writing own rules with new properties, exclude the property path e.g.: 'my_rule_set,.*>.*>[my_property]'
   excludes: ''
+
 processors:
   active: true
   exclude:
