--- a/telnyx_common/build.gradle
+++ b/telnyx_common/build.gradle
@@ -46,6 +46,8 @@ dependencies {
 
     implementation project(':telnyx_rtc')
 
+    implementation deps.gson
+
     implementation 'androidx.lifecycle:lifecycle-livedata-core-ktx:2.7.0'
 
 }
