--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'com.google.gms.google-services'
     id 'com.google.dagger.hilt.android'
+    id 'kotlin-parcelize'
 }
 
 def localProperties = new Properties()
@@ -110,6 +111,8 @@ dependencies {
     implementation deps.dialpad
 
     implementation "io.getstream:stream-webrtc-android:1.0.0"
+    implementation ("androidx.core:core-telecom:1.0.0-beta01")
+    implementation "com.google.accompanist:accompanist-permissions:0.37.0"
 
     implementation deps.gson
     implementation deps.retrofit.runtime
@@ -141,6 +144,9 @@ dependencies {
     implementation deps.hilt.android
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-inappmessaging-display:20.1.3'
+    implementation 'androidx.compose.runtime:runtime-android:1.7.7'
+    implementation 'androidx.compose.foundation:foundation-layout-android:1.7.7'
+    implementation 'androidx.compose.material3:material3-android:1.3.1'
     kapt deps.hilt.compiler
 
     //Testing:
