--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,6 +147,7 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-android:1.7.7'
     implementation 'androidx.compose.foundation:foundation-layout-android:1.7.7'
     implementation 'androidx.compose.material3:material3-android:1.3.1'
+    implementation "androidx.compose.material:material-icons-extended:1.7.7"
     kapt deps.hilt.compiler
 
     //Testing:
