fix: running unit test on every push is crazy

--- a/.github/workflows/unit_test_on_push.yml
+++ b/.github/workflows/unit_test_on_push.yml
@@ -1,10 +1,14 @@
-
 ## 1
-name: Unit test on Push
+name: Unit test on Push or PR into Main
 
-## Actions that will be executed when you push code currently none
+## Actions that will be executed when you push or create a pull request to main
 on:
   push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 ## 2
 jobs:
