--- a/app/build.gradle
+++ b/app/build.gradle
@@ -148,6 +148,7 @@ dependencies {
     implementation 'androidx.compose.foundation:foundation-layout-android:1.7.7'
     implementation 'androidx.compose.material3:material3-android:1.3.1'
     implementation "androidx.compose.material:material-icons-extended:1.7.7"
+    implementation 'androidx.activity:activity-compose:1.10.0'
     kapt deps.hilt.compiler
 
     //Testing:
