--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,14 @@ android {
         unitTests.returnDefaultValues = true
     }
 
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.5.13"
+    }
+
+    buildFeatures {
+        compose = true
+    }
+
     buildFeatures {
         viewBinding true
         dataBinding true
@@ -144,12 +152,18 @@ dependencies {
     implementation deps.hilt.android
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-inappmessaging-display:20.1.3'
-    implementation 'androidx.compose.runtime:runtime-android:1.7.7'
-    implementation 'androidx.compose.foundation:foundation-layout-android:1.7.7'
-    implementation 'androidx.compose.material3:material3-android:1.3.1'
-    implementation "androidx.compose.material:material-icons-extended:1.7.7"
-    implementation 'androidx.activity:activity-compose:1.10.0'
     kapt deps.hilt.compiler
+
+    //Compose
+    implementation platform("androidx.compose:compose-bom:2025.01.01")
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.material3:material3"
+    implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation 'androidx.compose.runtime:runtime-android'
+    implementation 'androidx.compose.foundation:foundation-layout-android'
+    implementation 'androidx.compose.material3:material3-android'
+    implementation "androidx.compose.material:material-icons-extended"
+    implementation 'androidx.activity:activity-compose:1.10.0'
 
     //Testing:
     testImplementation "androidx.arch.core:core-testing:2.1.0"
