--- a/telnyx_common/build.gradle
+++ b/telnyx_common/build.gradle
@@ -49,5 +49,10 @@ dependencies {
     implementation deps.gson
 
     implementation 'androidx.lifecycle:lifecycle-livedata-core-ktx:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.7'
+    implementation 'com.jakewharton.timber:timber:4.5.1'
+    api 'com.google.firebase:firebase-messaging-ktx:24.1.0'
 
 }
