--- a/compose_app/src/main/AndroidManifest.xml
+++ b/compose_app/src/main/AndroidManifest.xml
@@ -5,13 +5,13 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".App"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TelnyxAndroidWebRTCSDK">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/title_activity_main"
             android:theme="@style/Theme.TelnyxAndroidWebRTCSDK">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
