--- a/.gitignore
+++ b/.gitignore
@@ -86,4 +86,4 @@ lint/outputs/
 lint/tmp/
 # lint/reports/
 app/google-services.json
-app/google-services.json
+connection_service_app/google-services.json
