--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -260,4 +260,5 @@ dependencies {
 
     def lifecycle_version = "2.7.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 }
