--- a/.github/workflows/ui_tests.yml
+++ b/.github/workflows/ui_tests.yml
@@ -2,6 +2,11 @@ name: UI Tests
 
 on:
   workflow_dispatch:
+      inputs:
+        branch:
+          description: 'Branch to run the workflow on'
+          required: true
+          default: 'main'
 
 jobs:
   ui-tests:
