--- a/.github/workflows/ui_tests.yml
+++ b/.github/workflows/ui_tests.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Build Debug APK and Test APK
         run: |
-          ./gradlew :xmlapp:assembleDebug :xmlapp:assembleDebugAndroidTest
+          ./gradlew :xml_app:assembleDebug :xml_app:assembleDebugAndroidTest
           ./gradlew :compose_app:assembleDebug :compose_app:assembleDebugAndroidTest
 
       - name: Set up Google Cloud SDK
@@ -49,8 +49,8 @@ jobs:
         run: |
           gcloud firebase test android run \
             --type instrumentation \
-            --app xmlapp/build/outputs/apk/debug/xmlapp-debug.apk \
-            --test xmlapp/build/outputs/apk/androidTest/debug/xmlapp-debug-androidTest.apk \
+            --app xml_app/build/outputs/apk/debug/xml_app-debug.apk \
+            --test xml_app/build/outputs/apk/androidTest/debug/xml_app-debug-androidTest.apk \
             --device model=Pixel2,version=30,locale=en,orientation=portrait \
             --timeout 30m
 
