--- a/.github/workflows/ui_tests.yml
+++ b/.github/workflows/ui_tests.yml
@@ -39,11 +39,13 @@ jobs:
           ./gradlew :xml_app:assembleDebug :xml_app:assembleDebugAndroidTest
           ./gradlew :compose_app:assembleDebug :compose_app:assembleDebugAndroidTest
 
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v1
+      - name: 'Authenticate Cloud SDK'
+        uses: 'google-github-actions/auth@v2'
         with:
-          project_id: ${{ secrets.FIREBASE_PROJECT_ID }}
-          service_account_key: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+          credentials_json: '${{ secrets.TEST_UI_GCLOUD_SERVICE_KEY }}'
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
 
       - name: Run XML App Tests on Firebase Test Lab
         run: |
