--- a/compose_app/src/main/AndroidManifest.xml
+++ b/compose_app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:launchMode="singleTask"
             android:theme="@style/Theme.TelnyxAndroidWebRTCSDK">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
