Revert "Merge branch 'main' into WEBRTC-2635"
This reverts commit 6e4d487348670c035d7b10d8e392769809fa61da, reversing
changes made to e3e5b11b83064ebed5ef8e53c7b0acd49cb5a27d.

--- a/telnyx_rtc/config/detekt.yml
+++ b/telnyx_rtc/config/detekt.yml
@@ -272,7 +272,7 @@ exceptions:
   ThrowingNewInstanceOfSameException:
     active: true
   TooGenericExceptionCaught:
-    active: false
+    active: true
     excludes: ['**/test/**', '**/androidTest/**', '**/commonTest/**', '**/jvmTest/**', '**/jsTest/**', '**/iosTest/**']
     exceptionNames:
       - 'ArrayIndexOutOfBoundsException'
