feat: UI of assistant call and login, code refactored

--- a/telnyx_common/build.gradle
+++ b/telnyx_common/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     implementation deps.kotlin.stdlib
     implementation deps.androidx_core
+    implementation deps.material
 
     api project(':telnyx_rtc')
 
