--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -174,6 +174,7 @@ dependencies {
 
     implementation deps.kotlin.stdlib
     implementation deps.appcompat
+    implementation deps.material
 
     implementation "com.telnyx.webrtc.lib:library:1.0.1"
 
