WEBRTC-3021 [Android] Migrate Flakey UI tests to new test tool (#719)
* Feature: compose app UI tests improved

* Feature: xml app UI tests improved and unified with compose app tests

* chore: unit test file restored

* chore: varaible name changed

* fix: attempt variable rename for CI fix + remove unused imports

* Revert "fix: attempt variable rename for CI fix + remove unused imports"

This reverts commit d2248c9538e8e86b3b10ad357eb1ee5f3c6f5d7b.

* feat: add clean step

* fix: move clean build step

* fix: merge conflict with explicit connectionMetricSheetState

---------

Co-authored-by: Oliver Zimmerman <oezimmerman@gmail.com>

--- a/.github/workflows/ui_tests.yml
+++ b/.github/workflows/ui_tests.yml
@@ -42,6 +42,9 @@ jobs:
           echo "TEST_SIP_CALLER_NUMBER=${{ secrets.TEST_SIP_CALLER_NUMBER }}" >> local.properties
           echo "TEST_SIP_DEST_NUMBER=${{ secrets.TEST_SIP_DEST_NUMBER }}" >> local.properties
 
+      - name: Clean Build
+        run: ./gradlew clean
+
       - name: Build Debug APK and Test APK
         run: |
           ./gradlew :samples:xml_app:assembleDebug samples:xml_app:assembleDebugAndroidTest
