chore(Olitron): bump non-breaking dependencies to latest versions
- OkHttp 4.9.0 → 4.12.0
- Retrofit 2.9.0 → 2.11.0
- Timber 4.5.1 → 5.0.1
- Firebase BOM 28.2.1 → 33.7.0
- AndroidX AppCompat 1.2.0 → 1.7.0
- AndroidX Fragment 1.3.2 → 1.8.5
- Material 1.4.0 → 1.12.0
- ConstraintLayout 2.0.4 → 2.2.0
- Java-WebSocket 1.5.1 → 1.5.7
- AndroidX Lifecycle aligned to 2.8.7 (was mixed 2.6.2-2.8.7)
- AndroidX Room 2.6.1 → 2.7.0
- Detekt 1.21.0 → 1.23.7
- Removed duplicate classpath entries in build.gradle.kts
- Fixed deprecated rootProject.buildDir usage

--- a/telnyx_common/build.gradle
+++ b/telnyx_common/build.gradle
@@ -50,16 +50,16 @@ dependencies {
 
     implementation deps.gson
 
-    implementation 'androidx.lifecycle:lifecycle-livedata-core-ktx:2.7.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.7.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-livedata-core-ktx:2.8.7'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.8.7'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.7'
-    implementation 'com.jakewharton.timber:timber:4.5.1'
+    implementation deps.timber
     api 'com.google.firebase:firebase-messaging-ktx:24.1.0'
 
     // Room database
-    implementation 'androidx.room:room-runtime:2.6.1'
-    implementation 'androidx.room:room-ktx:2.6.1'
-    kapt 'androidx.room:room-compiler:2.6.1'
+    implementation 'androidx.room:room-runtime:2.7.0'
+    implementation 'androidx.room:room-ktx:2.7.0'
+    kapt 'androidx.room:room-compiler:2.7.0'
 
 }
